Improve filtering in civotes_detail.html
Previously, the clickable links on civotes_detail.html referred back
to civotes.html, which is not what we want.

This commit:

- Adds filtering on CI name for civotes_detail.html, as an alternative
  to filtering on commit_hash+distro_hash.
- Fixes pagination in the function, so it is now applied after filters.
- Makes the votes.j2 template paginate correctly if filtered on ciname
  or commit_hash+distro_hash.

TG-240
TG-239 #closed
